--- a/Chrome Extensions/momentum-clone/src/acknowledgements.json
+++ b/Chrome Extensions/momentum-clone/src/acknowledgements.json
@@ -1,4 +1,20 @@
 {
+  "codeReferences": {
+    "npm": [
+      {
+        "title": "vue-cli-plugin-browser-extension",
+        "author": "adambullmer",
+        "url": "https://www.npmjs.com/package/vue-cli-plugin-browser-extension"
+      }
+    ],
+    "stackOverflow": [
+      {
+        "title": "Make a drop-down menu scrollable",
+        "author": "Rohan Kumar",
+        "url": "https://stackoverflow.com/questions/21983819/making-a-drop-down-menu-scrollable"
+      }
+    ]
+  },
   "imageReferences": {
     "flatIcon": [
       {
@@ -45,6 +61,20 @@
         "title": "Best HTML, CSS, Javascript Practice : Chrome Extension",
         "author": "Jungwon Sea",
         "url": "https://medium.com/@thejungwon/best-html-css-javascript-practice-chrome-extension-ae4e5e7839e"
+      }
+    ],
+    "cushion": [
+      {
+        "title": "Reactive Time with Vue.js",
+        "author": "Jonnie Hallman",
+        "url": "https://cushionapp.com/journal/reactive-time-with-vuejs"
+      }
+    ],
+    "vue.js": [
+      {
+        "title": "TodoMVC",
+        "author": "Evan You",
+        "url": "https://vuejs.org/v2/examples/todomvc.html"
       }
     ]
   }
