Inclusion of Vuex and Application Settings
Vuex store has most of its abstractions templated out in skeleton form.

General settings can toggle items visible to users.

Committing before adding axios (http client) plugin for api usage.

--- a/Chrome Extensions/momentum-clone/src/acknowledgements.json
+++ b/Chrome Extensions/momentum-clone/src/acknowledgements.json
@@ -12,6 +12,35 @@
         "title": "Make a drop-down menu scrollable",
         "author": "Rohan Kumar",
         "url": "https://stackoverflow.com/questions/21983819/making-a-drop-down-menu-scrollable"
+      },
+      {
+        "title": "How to clear state in vuex store?",
+        "author": "Michael Horojanski",
+        "url": "https://stackoverflow.com/questions/42295340/how-to-clear-state-in-vuex-store"
+      },
+      {
+        "title": "How do I right align div elements?",
+        "author": "Mariusz Jamro",
+        "url": "https://stackoverflow.com/questions/7693224/how-do-i-right-align-div-elements/7693264#7693264"
+      },
+      {
+        "title": "Remove padding from columns in Bootstrap 3",
+        "author": "MackieeE",
+        "url": "https://stackoverflow.com/questions/19562903/remove-padding-from-columns-in-bootstrap-3"
+      }
+    ],
+    "github": [
+      {
+        "title": "[Q] is there a way to vertically align an element to the bottom of the containing column?",
+        "author": "ak5",
+        "url": "https://github.com/jgthms/bulma/issues/407"
+      }
+    ],
+    "w3Schools": [
+      {
+        "title": "How TO - Hero Image",
+        "author": "n/a",
+        "url": "https://www.w3schools.com/howto/howto_css_hero_image.asp"
       }
     ]
   },
@@ -75,6 +104,13 @@
         "title": "TodoMVC",
         "author": "Evan You",
         "url": "https://vuejs.org/v2/examples/todomvc.html"
+      }
+    ],
+    "codeBurst.io": [
+      {
+        "title": "Build a Simple Todo App with Vue.js and Vuex 2.0",
+        "author": "paadams",
+        "url": "https://codeburst.io/build-a-simple-todo-app-with-vue-js-1778ae175514"
       }
     ]
   }
