--- a/Chrome Extensions/momentum-clone/package.json
+++ b/Chrome Extensions/momentum-clone/package.json
@@ -1,6 +1,6 @@
 {
   "name": "momentum-clone",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -11,12 +11,15 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "bulma": "^0.7.2",
+    "bulma-extensions": "^4.0.0",
     "moment": "^2.22.2",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^1.5.9",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persist": "^2.0.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.5.0",
@@ -29,7 +32,6 @@
     "@vue/eslint-config-prettier": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-eslint": "^10.0.1",
-    "bulma": "^0.7.2",
     "chai": "^4.1.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
